<resources>
    <string name="app_name">PredigSystem</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="calendar">Calendar</string>
    <string name="other">Other</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="user_settings">User</string>
    <string name="logout">Log Out</string>
    <string name="last_measures">Last Measures</string>
    <string name="todays_mean">Today\'s mean</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string-array name="list_settings">
        <item>General</item>
        <item>Notifications</item>
        <item>Locations</item>
        <item>About</item>
    </string-array>
    <string name="receive_notifications">Do you want to receive notifications?</string>
    <string-array name="array_blood">
        <item>1. What Causes High Blood Pressure?</item>
        <item>2. What Is Systolic and Diastolic Blood Pressure?</item>
        <item>3. What Is a Normal Blood Pressure?</item>
        <item>4. What Health Problems Are Associated With High Blood Pressure?</item>
        <item>5. How Do I Know if I Have High Blood Pressure?</item>
        <item>6. What Is the Treatment for High Blood Pressure</item>
        <item>7. What Are the Side Effects of High Blood Pressure Drugs?</item>
        <item>8. What Type of Diet Should I Follow if I Have High Blood Pressure</item>
        <item>9. When Should I Call My Doctor About High Blood Pressure?</item>
        <item>10. Are There any Drugs that Cause High Blood Pressure?</item>
    </string-array>
    <string-array name="answers_faq">
        <item>While the cause of high blood pressure in most people remains unclear, inactivity, poor diet, obesity, older age, and genetics -- can all contribute to the development of hypertension</item>
        <item>The blood pressure reading is measured in millimeters of mercury (mmHg) and is written as systolic pressure, the force of the blood against the artery walls as your heart beats, over diastolic pressure, the blood pressure between heartbeats. For example, a blood pressure reading is written as 120/80 mmHg, or "120 over 80". The systolic pressure is 120 and the diastolic pressure is 80.</item>
        <item>The Joint National Committee on Prevention, Detection, Evaluation, and Treatment of High Blood Pressure has classified blood pressure measurements into several categories:
\n a)Normal blood pressure is systolic pressure less than 120 and diastolic pressure less than 80 mmHg.
\n b)"Prehypertension" is systolic pressure of 120-139 or diastolic pressure of 80-89 mmHg.
\n c)Stage 1 Hypertension is systolic pressure of 140-159 or diastolic pressure of 90-99 mmHg.
\n d)Stage 2 Hypertension is systolic pressure of 160 or greater or diastolic pressure of 100 or greater.</item>
        <item>Several potentially serious health conditions are linked to high blood pressure, including:
\n a)Atherosclerosis: a disease of the arteries caused by a buildup of plaque, or fatty material, on the inside walls of the blood vessels; hypertension contributes to this buildup by putting added stress and force on the artery walls.
\n b)Heart Disease: Heart failure (the heart is not strong enough to pump blood adequately), ischemic heart disease (the heart tissue does not get enough blood and oxygen), and hypertensive hypertrophic cardiomyopathy (thickened, abnormally functioning heart muscle) are all associated with high blood pressure.
\n c)Kidney Disease: Hypertension can damage the blood vessels and filters in the kidneys, so that the kidneys cannot excrete waste properly. Kidney disease can also cause high blood pressure, when electrolytes (including sodium) cannot be adequately secreted from the body.
\n d)Stroke: Hypertension can lead to stroke, either by contributing to the process of atherosclerosis (which can lead to blockages and/or clots), or by weakening the blood vessel wall and causing it to rupture.
\n e)Eye Disease: Hypertension can damage the very small blood vessels in the retina.</item>
        <item>High blood pressure often does not have any symptoms, so you usually do not feel it. For that reason, hypertension is usually diagnosed by a health care professional during a routine checkup. If you have a close relative with hypertension, or other risk factors, it is especially important to pay attention to your blood pressure reading.
            \n If your blood pressure is extremely high, you may have unusually strong headaches, chest pain, difficulty breathing, or poor exercise tolerance. If you have any of these symptoms, seek an evaluation promptly.</item>
        <item>High blood pressure treatment usually involves making lifestyle changes and, if necessary, drug therapy.
\n Lifestyle changes for high blood pressure include:
\n a)Losing weight
\n b)Quitting smoking
\n c)Eating a healthy diet, such as the DASH diet, which is high in fruits, vegetables, lean protein and whole grains and low in salt and fat
\n d)Reducing the amount of salt in your diet
\n e)Regular aerobic exercise (such as brisk walking)
\n f)Limiting alcohol consumption
\n g)Seeking treatment for sleep apnea
\n Commonly prescribed high blood pressure drugs include ACE inhibitors, angiotensin receptor blockers, diuretics, beta-blockers, calcium channel blockers, and alpha-blockers (alpha-adrenergic antagonists).
\n If you are over age 60, the goal of hypertension treatment is a systolic pressure of 150 and a diastolic pressure of 90. The goal of treatment is 140/90 for those under age 60.</item>
        <item>
As is true with any medication, high blood pressure drugs have side effects. Among the most common are the following:

\n a)Diuretics: headache, weakness, low potassium blood levels
\n b)ACE inhibitors: dry and persistent cough, headache, diarrhea, high potassium blood levels
\n c)Angiotensin receptor blockers: fatigue, dizziness or fainting, diarrhea, high potassium blood levels
\n d)Calcium channel blockers: dizziness, heart rhythm problems, ankle swelling, constipation
\n e)Beta-blockers: dizziness or lightheadedness, decreased sexual ability, drowsiness, low heart rate
\n f)Alpha-blockers: dizziness, headache, pounding heartbeat, nausea, weakness, weight gain
    </item>
        <item>A healthy diet, such as the DASH (Dietary Approaches to Stop Hypertension) diet, is effective in helping to lower high blood pressure. The DASH diet calls for a certain number of daily servings from various food groups, including fruits, vegetables, and whole grains.

\n The following steps can also help:

\n a)Eating more fruits, vegetables, and low-fat dairy foods
\n b)Eating less of foods that are high in saturated fat and cholesterol, such as fried foods
\n c)Eating more whole grain products, fish, poultry, and nuts
\n d)Eating less red meat and sweets
\n e)Eating foods that are high in magnesium, potassium, and calcium
\n f)Eating foods with less sodium
    </item>
        <item>
If you are diagnosed with high blood pressure, it is important to see your doctor on a regular basis. He or she can answer your questions during these visits.

\n However, there may be other times when you may need to speak to your doctor. For instance:

\n a) If you are not responding to the prescribed treatment and your blood pressure is still high
\n b) If you are having any side effects from the blood pressure medication; if this happens, your doctor may wish to adjust the dosage of the medication or put you on another medication.
    </item>
        <item>
Some drugs that you take for another condition may increase blood pressure. These include amphetamines, methylphenidate (Concerta, Metadate, Methylin, Ritalin), corticosteroids, hormones (including birth control pills), certain migraine medications, cyclosporine, and erythropoietin.
\n Also, many over-the-counter medications that contain pseudoephedrine and ephedrine (for example, allergy and cold medicines and appetite suppressants) can increase blood pressure.
\n Do not stop taking any prescribed medication, including high blood pressure drugs, without talking to your doctor.
    </item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="marker_red">You are here</string>
    <string name="marker_orange">Hospitals</string>
    <string name="marker_yellow">Pharmacies</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_title_display_password">Change Password</string>
    <string name="pref_location_summary">Set the views of the Map</string>
    <string name="pref_location">Change the view on the map</string>
    <string name="pref_network">Network</string>
    <string name="pref_network_type">Network type</string>
    <string name="pref_network_type_summary">Choose the network that can be used.</string>
    <string-array name="pref_networks">
        <item>Mobile Data and Wi-Fi</item>
        <item>Only Wi-Fi</item>
    </string-array>
    <string-array name="pref_networks_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="bp_not_saved">Could not save Blood Pressure measurement</string>
    <string name="bp_saved">Blood Pressure measurement saved!</string>
    <string name="api_fail">Network error!</string>
    <string name="doctor"> Doctor </string>
    <string name="hour"> Hour </string>
    <string name="day"> Day </string>
    <string name="reason"> Reason </string>
</resources>