<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Personal Informations"
        android:key="personal_category">

        <EditTextPreference
            android:inputType="text"
            android:key="name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name"
            android:summary="Enter Your Name"
            android:dialogTitle="Enter Your Name"
            android:dialogMessage="Enter Your Name"
            android:defaultValue="John Smith"/>


        <EditTextPreference
            android:key="email_address"
            android:title="Change Email Address"
            android:summary="Enter Your New Email Address"
            android:dialogTitle="Enter Your New Email Address"
            android:dialogMessage="Enter Your New Email Address"
            android:inputType="textEmailAddress"
            android:defaultValue="john@smith.com"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_network" >
        <ListPreference
            android:defaultValue="1"
            android:key="prefNetwork"
            android:summary="@string/pref_network_type_summary"
            android:title="@string/pref_network_type"
            android:entries="@array/pref_networks"
            android:entryValues="@array/pref_networks_values">
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>
